# Ultralisk

./: .gitignore  CLAUDE.md  README.md  app.py  claude-project-instructions.txt  hello.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/add-strategy/: SKILL.md
.claude/skills/review-frontend/: SKILL.md
.claude/skills/run-backtest/: SKILL.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdvancedSettings.tsx  EquityChart.tsx  InfoTip.tsx  MetricCard.tsx  PriceChart.tsx  RSIChart.tsx  Sidebar.tsx  StrategyPanel.tsx  TradeLog.tsx
frontend/src/lib/: AuthContext.tsx  (+4 more)
scripts/: demo.py
server/: main.py  schemas.py
thesislab/: __init__.py  cli.py  domain.py  filters.py
thesislab/analytics/: __init__.py  metrics.py  report.py
thesislab/data/: csv_provider.py  fake_provider.py  provider.py
thesislab/engine/: backtester.py  portfolio.py
thesislab/strategies/: __init__.py  base.py  butterfly.py  calendar_spread.py  covered_call.py  debit_spread.py  iron_condor.py  protective_put.py  short_straddle.py  single_leg.py  straddle.py  strangle.py  utils.py  vertical_spread.py
ultralisk/: __init__.py  cli.py  domain.py  filters.py  indicators.py
ultralisk/analytics/: metrics.py  report.py
ultralisk/data/: __init__.py  csv_provider.py  fake_provider.py  provider.py
ultralisk/engine/: __init__.py  backtester.py  portfolio.py
ultralisk/strategies/: __init__.py  base.py  covered_call.py  iron_condor.py  protective_put.py  straddle.py  utils.py  vertical_spread.py
(+5 files in other folders)
