[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultralisk"
version = "0.1.0"
description = "Options trading backtesting tool"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["ultralisk*"]

[project.optional-dependencies]
viz = ["pandas", "matplotlib"]
dev = ["pytest"]

[project.scripts]
ultralisk = "ultralisk.cli:main"
