[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesislab"
version = "0.1.0"
description = "Options trading backtesting tool"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["thesislab*"]

[project.optional-dependencies]
viz = ["pandas", "matplotlib"]
dev = ["pytest"]

[project.scripts]
thesislab = "thesislab.cli:main"
